fixed camera content going over the frame on mobile and problems with sections' padding

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
   font-family: 'Goldman', sans-serif;
   z-index: 10;
 }
+* {
+  background-color: 10px solid red;
+}
 
 .header {
   width: 100vw;
@@ -40,6 +43,7 @@
   justify-content: center;
   align-items: flex-start;
   margin-top: 2vw;
+  z-index: 50;
 }
 
 .title {
@@ -52,6 +56,7 @@
   margin: 0;
   text-align: center;
   transition-duration: 0.1s; 
+  z-index: 50;
 }
 
 .main {
@@ -59,31 +64,34 @@
   flex: 1;
   width: 100vw;
   justify-content: space-between;
-  align-items: flex-start;
-  padding: 2vw 6vw 0 6vw;
+  align-items: stretch;
+  padding: 0;
   box-sizing: border-box;
   z-index: 10;
+  height: 100%;
 }
 
-.left, .right {
+.camera-mobile-wrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  flex: 1 1 0;
-  min-width: 0;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  z-index: -10;
+  order: 1;
 }
 
 .left {
   max-width: 35vw;
-  align-items: flex-start;
-  padding-left: 0;
-  margin-left: -2vw;
+  margin-left: 0;
+  padding-left: 2vw;
+  height: 100%;
 }
 
 .right {
   max-width: 35vw;
-  align-items: flex-end;
-  margin-right: -2vw;
+  margin-right: 0;
+  padding-right: 2vw;
+  height: 100%;
 }
 
 .instruct {
@@ -158,19 +166,4 @@
 }
 .filler-right {
   text-align: right;
-}
-
-@media (max-width: 900px) {
-  .main {
-    flex-direction: column;
-    align-items: stretch;
-    padding: 2vw 2vw 0 2vw;
-  }
-  .left, .right {
-    max-width: 100vw;
-    align-items: flex-start;
-  }
-  .right {
-    align-items: flex-end;
-  }
 }
